--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 asgiref==3.2.3
 Django==3.0.4
-pytz==2019.3
-sqlparse==0.3.1
 djangorestframework==3.11.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+mysqlclient==1.4.6
+prettytable==0.7.2
+pyecharts==1.7.0
+pytz==2019.3
+simplejson==3.17.0
+sqlparse==0.3.1
