--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
 asgiref==3.2.3
+click==7.1.1
 Django==3.0.4
+django-simpleui==3.9.1
 djangorestframework==3.11.0
+h11==0.9.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 mysqlclient==1.4.6
 prettytable==0.7.2
 pyecharts==1.7.0
 pytz==2019.3
+redis==3.4.1
 simplejson==3.17.0
 sqlparse==0.3.1
+uvicorn==0.11.3
+websockets==8.1
